<resources>
    <string name="app_name">My Financial Assistant</string>

    <string name="home">Home</string>
    <string name="statistics">Statistics</string>
    <string name="history">History</string>
    <string name="calendar">Calendar</string>
    <string name="manageSources">Manage Sources</string>
    <string name="manageCategories">Manage Categories</string>


    <string name="overview">Overview</string>
    <string name="total_balance">Total Balance</string>

    <string name="zeroDollar">0.0</string>
    <string name="dollarSign">$</string>

    <string name="totalExpenses">Total Expenses</string>

    <string name="expenses">Expenses</string>
    <string name="incomes">Incomes</string>

    <string name="categories">Categories</string>

    <string name="sources">Sources</string>
    <!--ADD INCOME-->
    <string name="add_income">Add Income</string>
    <string name="edit_income">Edit Income</string>

    <string name="source">Source</string>
    <string name="amount">Amount</string>
    <string name="date">Date</string>

    <string name="add">Add</string>
    <string name="save">Save</string>

    <string name="source_name">Source Name</string>

    <string name="new_source">New Source</string>

    <string name="note">Note</string>
    <!--ADD EXPENSE-->

    <string name="add_expense">Add Expense</string>
    <string name="edit_expense">Edit Expense</string>

    <string name="new_category">New Category</string>
    <string name="category">Category</string>

    <string name="category_name">Category Name</string>

    <string name="amount_cant_be_zero">Amount can not be zero !</string>
    <!--HISTORY-->
    <string name="income">Income</string>
    <string name="expense">Expense</string>

    <string name="noTransactions">No Transactions Found ! </string>

    <string name="emptyString">Please enter a valid value.</string>


    <string name="deleteMessage">Are you sure you want to delete this transaction ? \n This will remove all its effects.</string>
    <string name="cancel">Cancel</string>
    <string name="yes">Yes</string>

    <string name="month_expenses">%1$s Expenses</string>
    <string name="month_incomes">%1$s Incomes</string>
    <string name="month_net">%1$s Net</string>

    <string name="noExpensesData">No expenses data in this month, add expenses to see some statistics.</string>


    <string name="percentOfExpenses">Percent of Expenses </string>

    <string name="percentOfIncomes">Percent of Incomes </string>


    <string name="allInMonth">All in %1$s</string>

    <string name="noIncomesInMonth">No incomes in %1$s yet. </string>

    <string name="selectItemToView">Select chart item to view its data. </string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>


    <string-array name="defaultCategories">
        <item>Home</item>
        <item>Schools</item>
        <item>Car</item>
    </string-array>


    <string-array name="defaultSources">
        <item>Salary</item>
    </string-array>

    <string name="deleteCategoryMessage">Are you sure you want to delete this category ?\n Important Not: This will delete all transactions with this category.</string>
    <string name="no">No</string>
    <string name="logoutMessage">Are you sure you want to logout?</string>
    <string name="loading_data">Loading Data</string>

    <string name="add_widget">Add widget</string>


    <string name="minus">-</string>
    <string name="plus">+</string>
    <string name="selectDate">Select Date</string>
    <string name="add_expense_or_income">Add expense or income</string>
    <string name="signin_with_google">Signin with Google</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_category">Add Category</string>
    <string name="add_source">Add source</string>
    <string name="loading">Loading</string>
    <string name="hello_wizard">Ooh, I do not know your name until now! \n Tell me by Sign in with Google</string>
    <string name="hello">Hi Mr/Ms ...</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="signin_hint">Sign in with Google to save your data and get it back whenever you want.</string>
    <string name="wellcome_to_app">Welcome to My Financial Assistant.</string>

</resources>
