<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.shamdroid.myfinancialassistant.UI.SignInFragment"
    android:gravity="center"
    android:fitsSystemWindows="true">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:gravity="center"
        android:layout_weight="1">

        <ImageView
            android:layout_height="@dimen/signin_app_icon_dimen"
            app:srcCompat="@drawable/app_icon"
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/sectionMargin"
            android:contentDescription="@string/app_name"/>

        <TextView
            android:text="@string/wellcome_to_app"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/textTitlePadding"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"
            android:textColor="@android:color/white"
            android:layout_margin="@dimen/textTitlePadding" />

        <com.google.android.gms.common.SignInButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/signin_with_google"
            android:id="@+id/btnSignIn"
            android:layout_marginTop="@dimen/activity_vertical_margin"></com.google.android.gms.common.SignInButton>

    </LinearLayout>

    <TextView
        android:text="@string/signin_hint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView6"
        android:padding="@dimen/textTitlePadding"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Small"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent" />


</LinearLayout>
