<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/widget_margin"
    android:orientation="vertical"
    android:id="@+id/appWidget"
    android:background="@drawable/rounded_background">


    <TextView
        android:text="@string/app_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView5"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:gravity="center"
        android:textColor="@android:color/white"
        android:padding="@dimen/textTitlePadding"
        android:background="@drawable/top_corners_rounded"
        android:backgroundTint="@color/colorPrimary"
        android:textSize="18sp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:text="@string/total_balance"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingBottom="@dimen/textTitlePadding"
            android:paddingTop="@dimen/textTitlePadding"
            android:textColor="@color/gray_600" />

        <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingBottom="@dimen/textTitlePadding"
            android:paddingTop="@dimen/textTitlePadding"
            android:textColor="@color/colorAccent"
            android:id="@+id/txtWidgetBalance" />
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingBottom="@dimen/textTitlePadding"
            android:paddingTop="@dimen/textTitlePadding"
            android:text="TextView"
            android:id="@+id/txtWidgetMonthIncome"
            android:textColor="@color/gray_600" />

        <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingBottom="@dimen/textTitlePadding"
            android:paddingTop="@dimen/textTitlePadding"
            android:textColor="@color/green"
            android:id="@+id/txtWidgetMonthIncomeValue" />
    </LinearLayout>




    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingBottom="@dimen/textTitlePadding"
            android:paddingTop="@dimen/textTitlePadding"
            android:text="TextView"
            android:id="@+id/txtWidgetMonthExpenses"
            android:textColor="@color/gray_600" />

        <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingBottom="@dimen/textTitlePadding"
            android:paddingTop="@dimen/textTitlePadding"
            android:textColor="@color/red"
            android:id="@+id/txtWidgetMonthExpensesValue" />
    </LinearLayout>



    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:layout_weight="1"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtWidgetMonthNet"
            android:layout_weight="3"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingBottom="@dimen/textTitlePadding"
            android:paddingTop="@dimen/textTitlePadding"
            android:text="TextView"
            android:textColor="@color/gray_600" />

        <TextView
            android:text="TextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/txtWidgetMonthNetValue"
            android:layout_weight="1"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:paddingBottom="@dimen/textTitlePadding"
            android:paddingTop="@dimen/textTitlePadding"
            android:textColor="@color/green" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginBottom="@dimen/activity_horizontal_margin">

        <Button
            android:layout_width="@dimen/widget_circle"
            android:layout_height="@dimen/widget_circle"
            android:id="@+id/btnWidgetAddExpense"
            android:background="@drawable/red_circle"
            android:stateListAnimator="@null"
            android:text="@string/minus"
            android:textColor="@color/red"
            android:textSize="24sp"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" />

        <Button
            android:layout_width="@dimen/widget_circle"
            android:layout_height="@dimen/widget_circle"
            app:srcCompat="@drawable/account"
            android:id="@+id/btnWidgetAddIncome"
            android:background="@drawable/green_circle"
            android:stateListAnimator="@null"
            android:text="@string/plus"
            android:textSize="30sp"
            android:textColor="@color/green"
            android:layout_marginRight="8dp"
            android:layout_marginLeft="8dp" />
    </LinearLayout>

</LinearLayout>